a common file to reduce the number of files required by the default
repository implementation.

10. (Mike Brasher) - Fixed minor bug in repository implementation.

11. (Mike Brasher) - Committed fix to missing PARAMETER.REFERENCE XML element.

12. (Mike Brasher) - Committed rework of server into queue approach.

13. (Mike Brasher) - New webserver and webclient examples.

---------------------------------------------------------------------------
Version 1.1 - July 2001 Development branch
              Tagged as version_1_01 on 3 August 2001 (sorry should have been
              1.1

1. (Nitin Upasani - HP) Implementation of handleIndication() to deliver
   indication by defining IndicationDispatcher, HandlerTable, CIMHandler
   and ExportClient classes. the indication.

   Also implemented CIMxmlIndicationHandler and sendmailIndicationHandler to
   make the delivery of indications over Xml-HTTP and email respectively.

   Provided examples for HandlerTable, XmlIndicationDelivery and
   SendMailIndicationDelivery to support this implementation.

2. (Markus Mueller - IBM) Implementation of a Linux specific threading
   library and a thread-safe message queue (first stage). Classes defined
   are Mutex, Condition, Semaphore, AtomicInt, ReadWriteSem, cleanup_handler
   and SimpleThread.

3. (Carol Ann Krug Graves - HP)  Implementation of wbemexec CLI.  Please refer
   to the man page in pegasus/src/Clients/wbemexec/doc/wbemexec.html for more
   information on using wbemexec.  A simple test script is included.  Please
   see pegasus/src/Clients/wbemexec/tests/readme for information on running
   the test script.

4. (Sushma Fernandes - HP)  Implementation of Trace Framework.  Please
   refer to the documentation in src/Pegasus/Common/doc/TracingDevGuide.pdf
   and
   src/Pegasus/Common/doc/TracingUserGuide.pdf for more information on using
   the Trace framework. Classes defined are src/Pegasus/Common/Tracer.cpp and
   src/Pegasus/Common/TraceFileHandler.cpp.
