@@ -30,6 +30,7 @@ DIRS = \
     String \
     StrToInstName \
     TimeValue \
+    Tracer \
     ValidateClass \
     Value \
     XmlDump \
