@@ -18,6 +18,5 @@
 options=false
 logdir=/tmp
 traceLevel=4
-traceFilePath=/tmp/pegasus.trace
 traceComponents=ALL
 port=5988
